added last name to README

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Created a git repo for Trevor's UIImage resize category.
+Created a git repo for Trevor Harmon's UIImage resize category.
 http://vocaro.com/trevor/blog/2009/10/12/resize-a-uiimage-the-right-way/
 
